2003-01-25  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Makefile.am,
          src/openvrml/OpenVRML/quaternion.cpp,
          src/openvrml/OpenVRML/quaternion.h:  Added Quaternion class.

2003-01-24  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp:  Convert backslashes in
          output of _fullpath to slashes.

        * README:  Updated dependency list to include FreeType and
          Fontconfig; updated link to Win32 dependencies archive.

2003-01-23  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/VrmlMatrix.h,
          src/openvrml/OpenVRML/field.h:  Removed unnecessary
          applications of OPENVRML_SCOPE.

2003-01-19  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp,
          src/openvrml/OpenVRML/field.h:  Added operator==, operator!=
          for FieldValue classes.

        * src/openvrml/OpenVRML/field.cpp:  Fixed const-correctness
          problem caught by gcc 3.2.1.

2003-01-15  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp:  Removed obsolete code.

2003-01-08  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/script.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Renamed Node::*Impl
          private virtual functions to do_*.

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h: Fixed exception
          specifications for do_initialize methods.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h:  Scene::initialize throws
          std::bad_alloc.

2003-01-07  Braden McDaniel  <braden@endoframe.com>

        * configure.ac, m4/Makefile.am, m4/ax_check_gl.m4, m4/gl.m4,